--- a/app/utils/mixins/scrollbar.scss
+++ b/app/utils/mixins/scrollbar.scss
@@ -2,3 +2,16 @@
   -webkit-touch-callout: none;
   user-select: none;
 }
+
+.ScrollbarContent--vertical {
+  width: 100%;
+  height: 300px;
+  overflow: auto;
+  background: rgb(253, 253, 253);
+}
+
+.ScrollbarContent--noVertical {
+  width: 100%;
+  overflow: auto;
+  background: rgb(253, 253, 253);
+}
