--- a/src/__examples__/app.css
+++ b/src/__examples__/app.css
@@ -5,6 +5,13 @@ html {
   font-weight: lighter;
 }
 
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 .ScrollbarContainer--scrolling {
   -webkit-touch-callout: none;
   user-select: none;
